deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projet2025
  namespace: prod
  labels: { app: projet2025 }
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxUnavailable: 0, maxSurge: 1 }
  selector:
    matchLabels: { app: projet2025 }
  template:
    metadata:
      labels: { app: projet2025 }
    spec:
      containers:
        - name: projet2025
          image: docker.io/haitamleb/projet2025:main
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8000 }]
          readinessProbe:
            httpGet: { path: /, port: 8000 }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /, port: 8000 }
            initialDelaySeconds: 10
            periodSeconds: 10
