mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: test
spec:
  clusterIP: None # Headless service pour StatefulSet
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
