redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: test
spec:
  serviceName: redis
  replicas: 2
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.0
          ports:
            - containerPort: 6379
          command:
            - sh
            - -c
            - |
              if [ "$(hostname)" = "redis-0" ]; then
                redis-server;
              else
                redis-server --replicaof redis-0.redis.test.svc.cluster.local 6379;
              fi
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: test
spec:
  ports:
    - port: 6379
      targetPort: 6379
  clusterIP: None
  selector:
    app: redis
