ingressProd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projet2025-prod # ← obligatoire
  namespace: prod # ← bien mettre ton namespace
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: projet-prod.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: projet2025
                port:
                  number: 80
